--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 
-	<title>Veracious Vixen Media</title>
+	<title>Tunan Pan | Design + Social Impact</title>
 	<meta name="description" content="Online portfolio website of designer, artist, and social justice advocate, Tunan Pan." />
 	<meta name="keywords" content="online portfolio,design,designer,art,artist,social justice advocate,Tunan Pan,Veracious Vixen Media, vvmedia, vvm, New Zealand,social justice,design graduate,portfolio,digital art,digital media,illustration,installations,animation,interactive,drawing,graphic design" />
 	<meta name="author" content="Tunan Pan" />
@@ -78,16 +78,14 @@
      <p>I'm especially interested in interactive mediums and spaces, and have recently been exploring game development and event design.</p>
      <p>Feel free to contact me with project + collaboration possibilities, or follow me on my journey:</p>
      <p class="contacttext">
-      <span><a href="mailto:tpan@vvmedia.co.nz" target="_blank">email</a></span>.
-      <span><a href="http://nz.linkedin.com/in/tunanpan" target="_blank">linkedin</a></span>.
+      <span><a href="mailto:tunanp@gmail.com" target="_blank">email</a></span>.
+      <span><a href="http://linkedin.com/in/tunanpan" target="_blank">linkedin</a></span>.
       <span><a href="http://www.instagram.com/tunanpan" target="_blank">instagram</a></span>.
-      <span><a href="https://www.facebook.com/VVMediaNZ" target="_blank">facebook</a></span>
      </p>
      <div class="contacttext_mobile">
-      <p><a href="mailto:tpan@vvmedia.co.nz" target="_blank">email</a></p>
-      <p><a href="http://nz.linkedin.com/in/tunanpan" target="_blank">linkedin</a></p>
+      <p><a href="mailto:tunanp@gmail.com" target="_blank">email</a></p>
+      <p><a href="http://linkedin.com/in/tunanpan" target="_blank">linkedin</a></p>
       <p><a href="http://www.instagram.com/tunanpan" target="_blank">instagram</a></p>
-      <p><a href="https://www.facebook.com/VVMediaNZ" target="_blank">facebook</a></p>
     </div>
 
    </div>
